--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -4,6 +4,10 @@
 
 \documentclass[a4paper, 11pt]{article}
 
+% appendix
+
+\usepackage[toc,page]{appendix}
+
 % sintassi
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -512,5 +516,102 @@ The LOI is the minimum oxygen percentage needed to ignite a polymer bar which wi
 \bibitem{swell} A review of extrudate swell in polymers - C. Sirisinha – J.Sci.Soc.Thailand 23-259-280
 
 \end{thebibliography}
+
+\newpage
+
+\begin{appendices}
+
+\section{Vicat}
+
+
+\section{Melt flow index}
+
+\section{Molecular weight calculation + die swell}
+
+\section{Shore hardness measurement}
+
+\begin{table}[htp]
+	\centering
+	$
+	\begin{array}{lccccc}
+	\toprule
+	\textbf{Sample} & \textbf{Specimen 1} & \textbf{Specimen 2} & \textbf{Specimen 3} & \textbf{AVG} & \textbf{Proper AVG} \\
+	\midrule
+	1&65&64&65&65&82\\
+2&65&65&64&65&82\\
+3&56&55&57&56&71\\
+4&38&39&41&39&50\\
+5&63&63&63&63&80\\
+6&65&64&66&65&82\\
+7&56&58&58&57&73\\
+8&13&14&13&13&17\\
+9&13&13&14&13&17\\
+10&61&62&63&62&78\\
+11&72&71&72&72&91\\
+12&25&21&22&23&29\\
+13&57&59&59&58&74\\
+14&16&17&17&17&21\\
+15&10&11&9&10&13\\
+16&56&55&56&56&70\\
+17&68&68&68&68&86\\
+18&9&9&9&9&11\\
+19&51&51&51&51&65\\
+20&36&37&37&37&46\\
+21&42&42&42&42&53\\
+22&62&63&60&62&78\\
+23&54&54&54&54&68\\
+24&55&55&55&55&70\\
+25&9&10&8&9&11\\
+26&61&61&61&61&77\\
+27&4&4&4&4&5\\
+	\bottomrule
+	\end{array}
+	$
+	\caption{Shore-D data}
+	\label{tab:shored}
+\end{table}
+
+\begin{table}[htp]
+	\centering
+	$
+	\begin{array}{lcccc}
+	\toprule
+	\textbf{Sample} & \textbf{Specimen 1} & \textbf{Specimen 2} & \textbf{Specimen 3} & \textbf{AVG} \\
+	\midrule
+	1&98&97&97&97\\
+2&96&98&98&97\\
+3&98&97&98&98\\
+4&92&91&91&91\\
+5&98&97&98&98\\
+6&98&98&97&98\\
+7&94&94&94&94\\
+8&74&74&75&74\\
+9&74&76&75&75\\
+10&98&98&98&98\\
+11&97&93&93&94\\
+12&85&90&89&88\\
+13&97&93&97&96\\
+14&85&85&85&85\\
+15&68&68&69&68\\
+16&97&98&98&98\\
+17&99&99&99&99\\
+18&64&63&62&63\\
+19&92&91&95&93\\
+20&95&96&94&95\\
+21&98&99&98&98\\
+22&98&98&99&98\\
+23&97&94&96&96\\
+24&99&99&98&99\\
+25&70&70&70&70\\
+26&99&98&98&98\\
+27&51&50&50&50\\
+	\bottomrule
+	\end{array}
+	$
+	\caption{Shore-A data}
+	\label{tab:shorea}
+\end{table}
+
+\end{appendices}
 
 \end{document}
