lab 4 injection molding

--- a/Polymers lab/4/LAB 4.tex
+++ b/Polymers lab/4/LAB 4.tex
@@ -12,6 +12,7 @@
 \usepackage{fullpage}
 %\usepackage[cochineal]{newtxmath}
 %\usepackage{crimson,verbatim}
+\usepackage[charter]{mathdesign}
 \usepackage{textcomp}
 \usepackage{color,soul,hyperref,mwe}
 
@@ -20,9 +21,6 @@
 \usepackage{siunitx,amsmath,bm,chemfig}
 \newcommand{\ud}{\mathop{}\!\mathrm{d}}
 \sisetup{detect-all,math-rm = \ensuremath}
-%\usepackage{arev}
-\usepackage[charter]{mathdesign}
-
 
 \setatomsep{2em}
 
@@ -39,7 +37,7 @@ width0pt\right\delimright_{\rlap{$\scriptstyle#3$}}$};}}
 \setpolymerdelim()
 
 % tabelle e grafica
-\usepackage{booktabs,graphicx,graphbox,subfig,caption,pdfpages}
+\usepackage{booktabs,graphicx,subfig,caption,pdfpages}
 \captionsetup{font=small,
 	format=hang,
 	justification=centering,
@@ -95,18 +93,27 @@ width0pt\right\delimright_{\rlap{$\scriptstyle#3$}}$};}}
 
 \begin{document}
 
-\includepdf[pages=-]{frontespizio4.pdf}
+
 
 \begin{chapterabstract}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at est non arcu dapibus eleifend. In facilisis, erat ullamcorper condimentum venenatis, magna mi consequat enim, ac faucibus velit libero ut sapien. Nam fringilla elit at magna imperdiet dapibus. Vestibulum malesuada fringilla placerat. Suspendisse potenti. Nam ac vehicula nibh, eget suscipit purus. Curabitur tempus erat id pulvinar consectetur. Etiam quis diam magna. Etiam feugiat vulputate consequat. Nulla libero ligula, tempor quis mollis in, placerat vitae nisi. Proin ornare ut eros ac rhoncus. Integer et metus non mi pharetra sagittis. Praesent dignissim erat vel magna efficitur, sed efficitur mi viverra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus non ipsum non purus feugiat interdum non vel odio.
+
 
 \end{chapterabstract} 
 
+\section{Experimental activity}
 
+\subsection{Injection molding: sample evaluation}
+Different speciments of unknown polymeric materials have been analysed and identified. They have been produced by injection molding according to specific standards (ISO 527 IBA and ASTM D638).
+\begin{itemize}
+\item ISO 10.0 x 4.0 x 172 (mm);
+\item ASTM 12.7 x 3.2 x 165 (mm);
+\end{itemize}
 
-\section{Introduction}
+Size of all speciments and the mold cavity have been measured through a caliper in order to evalaute the shrinkage after the process.
+ASTM samples (with sprue and bar) have been weighted through a ... balance in order to compare the total weight and polymer density.
 
-
+\section{Results and discussion}
+\subsection{Injection molding: sample evaluation}
 
 \end{document}
