--- a/Polymers lab/4/LAB 4.tex
+++ b/Polymers lab/4/LAB 4.tex
@@ -110,8 +110,25 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at est non arcu
 \subsection{Compression molding}
 
 Prepared amount of polypropylene mixture has been used for compression molding process. A press by Carver has been used, as illustrated in Figure \ref{fig:press}. 
-\begin{figure}
-	\includegraphics{
-\end{figure}
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.2]
+	{PHOTO-2019-05-23-17-38-03.jpg}
+	\label{fig:press}
+	\caption{Carver press for compression molding.}
+\end{figure}\\
+The material to be pressed is put between two stainless steel plates, one having a frame of $12\times 12\, \text{mm}^2$ in order to produce a square plate of some mm of thickness. To avoid any adhesion with the plates, that are used to evenly distribute the pressure and to confine the melt (since the press is able to provide heat), two Mylar${^\text{\textregistered}}$ foils have been put in between the steel and the material. The press has been set to produce a pressure of 8 tons, equivalent to 5.45 MPa, in the frame. The material has undergone an heat treatment under this pressure of 200°C for 10 minutes. After this, the press has been cooled with water circulating in a refrigerating circuit inside of it and the molded piece extracted. Produced plate is then visually analyzed and weighted in order to estimate weight losses. \par 
+
+\subsubsection{Production of dumbbell specimens}
+
+After the analysis of the plate, this has been cut to obtain ISO 527-1BA shaped specimens, that are used in another laboratory activity.     
+
+\section{Results and discussion}
+
+\subsection{Compression molding}
+
+
+
+\subsubsection{Production of dumbbell specimens}
 
 \end{document}
