--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -561,6 +561,25 @@ The LOI is the minimum oxygen percentage needed to ignite a polymer bar which wi
 
 \section{Molecular weight calculation + die swell}
 
+\begin{table}[htp]
+	\centering
+	$
+	\begin{array}{cc}
+	\toprule
+	\textbf{Molecular weight}\, (g/mol) & \textbf{MFI}\, (230 ^\circ C, 2.16 kg) \\
+	\midrule
+	142 & 22.8\\
+	180 & 7.3\\
+	220 & 3.5\\
+	292 & 1.2\\
+	358 & 0.39\\
+	\bottomrule
+	\end{array}
+	$
+	\caption{Molecular weight and MFI for polypropylene}
+	\label{tab:tmwpp}
+\end{table}
+
 \section{Shore hardness measurement}
 
 \begin{table}[htp]
