--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -499,7 +499,7 @@ The results of the experiment are reported in Figure \ref{fig:duro}:
 	\centering
 	{\includegraphics[scale=0.3]{duro}}
 	\captionsetup{justification=centering}
-	\caption{Hardness values comparison}
+	\caption{Hardness values comparison. For ref. data see Appendix D.}
 	\label{fig:duro}
 \end{figure}
 
@@ -556,10 +556,9 @@ The LOI is the minimum oxygen percentage needed to ignite a polymer bar which wi
 
 \section{Vicat}
 
-
 \section{Melt flow index}
 
-\section{Molecular weight calculation + die swell}
+\section{Molecular weight calculation}
 
 \begin{table}[htp]
 	\centering
@@ -573,6 +572,31 @@ The LOI is the minimum oxygen percentage needed to ignite a polymer bar which wi
 	220 & 3.5\\
 	292 & 1.2\\
 	358 & 0.39\\
+	\bottomrule
+	\end{array}
+	$
+	\caption{Molecular weight and MFI for polypropylene}
+	\label{tab:tmwpp}
+\end{table}
+
+\section{Die swell}
+
+\begin{table}[htp]
+	\centering
+	$
+	\begin{array}{cccc}
+	\toprule
+	\textbf{Sample} & \textbf{Specimen} & \textbf{Mass}\, (g) & \textbf{Diamater}\, (mm)\\
+	\midrule
+	PP-1 & 1 & 0.3763 & 2.43\\
+	PP-1 & 2 & 0.3761 & 2.58\\
+	PP-1 & 3 & 0.4093 & 2.4\\
+	PP-2 & 1 & 0.1832 & 2.4\\
+	PP-2 & 2 & 0.1643 & 2.34\\
+	PP-2 & 3 & 0.1682 & 2.33\\
+	PP-3 & 1 & 0.3689 & 3.3\\
+	PP-3 & 2 & 0.3648 & 3.22\\
+	PP-3 & 3 & 0.3935 & 3.36\\
 	\bottomrule
 	\end{array}
 	$
