--- a/Polymers lab/3/LAB 3.tex
+++ b/Polymers lab/3/LAB 3.tex
@@ -554,9 +554,24 @@ The LOI is the minimum oxygen percentage needed to ignite a polymer bar which wi
 
 \begin{appendices}
 
-\section{Vicat}
-
 \section{Melt flow index}
+
+\begin{table}[htp]
+	\centering
+	$
+	\begin{tabular}{c|ccc}
+	\toprule
+	\textbf{MFI} & 190 & 210 & 230\\
+	\midrule
+	2.16 & 4.01 $\pm$ 0.25 & 4.36 $\pm$ 0.76 & 9.56 $\pm$ 0.58\\
+	5 & 16.13 $\pm$ 1.10 & 24.71 $\pm$ 0.60 & 37089 $\pm$ 2.02\\
+	7 & 25.29 $\pm$ 1.50 & 48.77 $\pm$ 0.15 & 81.60 $\pm$ 14.85\\
+	\bottomrule
+	\end{tabular}
+	$
+	\caption{Melt flow index values and standard deviations. m (kg) vs T ($^\circ$C)}
+	\label{tab:tmwpp}
+\end{table}
 
 \section{Molecular weight calculation}
 
