Compression molding, images

--- a/Polymers lab/4/LAB 4.tex
+++ b/Polymers lab/4/LAB 4.tex
@@ -127,8 +127,56 @@ After the analysis of the plate, this has been cut to obtain ISO 527-1BA shaped 
 
 \subsection{Compression molding}
 
+The mold before and after pressing is reported in Figure \ref{fig:beforeafter}. 
 
+\begin{figure}[htp]
+	\centering
+	\subfloat[][]
+	{\includegraphics[scale=0.2]{PHOTO-2019-05-23-17-38-02.jpg}} \qquad 
+	\subfloat[][]
+	{\includegraphics[scale=0.2]{PHOTO-2019-05-23-17-38-6.jpg}}
+	\label{fig:beforeafter}
+	\caption{Mold (a) before and (b) after compression.}
+\end{figure}
+
+The produced plate after manual mixing is illustrated in Figure \ref{fig:plate1}. 
+
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.2]
+	{PHOTO-2019-05-23-17-38-7.jpg}
+	\label{fig:plate1}
+	\caption{Plate produced in compression molding.}
+\end{figure}
+
+As it can be easily noted, the distribution of black PP in the white one is absolutely non-homogeneous, typical consequence of a manual mixing of the pellets (without any homogenization mixing in between). The other evident property of the pressed plate is the flash of melt outside of the mold: this is due to the too high amount of polymer inserted in the mold. 
+The weights of the product before and after compression are reported in Table \ref{tab:weights_compression}. 
+
+\begin{table}[htp]
+	\centering
+	$
+	\begin{array}{ccc}
+	\toprule
+	\textbf{Mixture mass}\,\text{(g)} & \textbf{Plate mass}\,\text{(g)} & \textbf{Variation}\,\text{(\%)} \\
+	\midrule
+	34.00 & 32.50 & -4.41\\
+	\bottomrule
+	\end{array}
+	$
+	\caption{Mass of the sample before and after pressing.}
+	\label{tab:weights_comparison}
+\end{table}
 
 \subsubsection{Production of dumbbell specimens}
+
+In Figure \ref{fig:dumbbell} the dumbbell specimens produced are displayed. 
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.3]
+	{PHOTO-2019-05-23-17-37-07.jpg}
+	\label{fig:dumbbell}
+	\caption{Produced specimens from compression molding plate.}
+\end{figure}\\
+As it can be seen, these specimens are characterized by low isotropy and homogeneity of the mixture. This will be a probable issue when mechanically testing and in resistance to flame propagation. Since the flame retardant is a weakener of strength (it introduces organics with poor adhesion and thus stress intensifiers), these specimens may have higher deformation at break than the more homogeneous ones produced in melt compounding. 
 
 \end{document}
