--- a/Polymers lab/4/LAB 4.tex
+++ b/Polymers lab/4/LAB 4.tex
@@ -107,6 +107,19 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at est non arcu
 
 \section{Introduction}
 
+\section{Experimental activity}
 
+\subsection{Compounding (Internal Mixer)}
+
+The process has been carried out with the instrument Thermo Haake Rheomix 600.\\
+The processing parameters used are the following:
+
+\begin{itemize}
+\item Temperature T = $200^\circ$C
+\item time t = 10 min
+\item Rotation speed $\omega$ = 50 rpm
+\end{itemize}
+
+The sample used has the same composition as Plate 1 sample with a mass of $32.05$ g.
 
 \end{document}
