--- a/Polymers lab/4/LAB 4.tex
+++ b/Polymers lab/4/LAB 4.tex
@@ -97,11 +97,42 @@ width0pt\right\delimright_{\rlap{$\scriptstyle#3$}}$};}}
 
 \begin{chapterabstract}
 
-
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit, lorem feugiat dignissim congue, justo metus eleifend urna, a iaculis turpis purus vel ante. Maecenas vitae augue iaculis elit blandit lobortis et et neque. Fusce lacinia augue fringilla nisi consequat dapibus. Quisque molestie volutpat commodo. Suspendisse porta velit facilisis interdum tempus. Donec accumsan, justo a eleifend ullamcorper, leo nisi blandit nibh, eu scelerisque metus odio in tellus. Maecenas eget varius metus, at fermentum lectus. Maecenas eget condimentum mi. Nulla facilisi. Sed at sagittis lectus, sed pulvinar ligula.
 
 \end{chapterabstract} 
 
+\section{Introduction}
+
 \section{Experimental activity}
+
+\subsection{Compounding (Internal Mixer)}
+
+The process has been carried out with the instrument Thermo Haake Rheomix 600.\\
+The processing parameters used are the following:
+
+\begin{itemize}
+\item Temperature T = $200^\circ$C
+\item time t = 10 min
+\item Rotation speed $\omega$ = 50 rpm
+\end{itemize}
+
+The sample used has the same composition as Plate 1 sample with a mass of $32.05$ g.
+
+\subsection{Compression molding}
+
+Prepared amount of polypropylene mixture has been used for compression molding process. A press by Carver has been used, as illustrated in Figure \ref{fig:press}. 
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.2]
+	{PHOTO-2019-05-23-17-38-03.jpg}
+	\label{fig:press}
+	\caption{Carver press for compression molding.}
+\end{figure}\\
+The material to be pressed is put between two stainless steel plates, one having a frame of $12\times 12\, \text{mm}^2$ in order to produce a square plate of some mm of thickness. To avoid any adhesion with the plates, that are used to evenly distribute the pressure and to confine the melt (since the press is able to provide heat), two Mylar${^\text{\textregistered}}$ foils have been put in between the steel and the material. The press has been set to produce a pressure of 8 tons, equivalent to 5.45 MPa, in the frame. The material has undergone an heat treatment under this pressure of 200°C for 10 minutes. After this, the press has been cooled with water circulating in a refrigerating circuit inside of it and the molded piece extracted. Produced plate is then visually analyzed and weighted in order to estimate weight losses. \par 
+
+\subsubsection{Production of dumbbell specimens}
+
+After the analysis of the plate, this has been cut to obtain ISO 527-1BA shaped specimens, that are used in another laboratory activity.     
 
 \subsection{Injection molding: sample evaluation}
 Different speciments of unknown polymeric materials have been analysed and identified. They have been produced by injection molding according to specific standards (ISO and ASTM).
@@ -113,7 +144,64 @@ Different speciments of unknown polymeric materials have been analysed and ident
 Size of all speciments and the mold cavity have been measured through a caliper in order to evalaute the shrinkage after the process.
 ASTM samples (with sprue and bar) have been weighted through the balance METTLER PM ${4600}$ in order to compare the total weight and polymer density.
 
+\newpage
+
 \section{Results and discussion}
+
+\subsection{Compression molding}
+
+The mold before and after pressing is reported in Figure \ref{fig:beforeafter}. 
+
+\begin{figure}[htp]
+	\centering
+	\subfloat[][]
+	{\includegraphics[scale=0.2]{PHOTO-2019-05-23-17-38-02.jpg}} \qquad 
+	\subfloat[][]
+	{\includegraphics[scale=0.2]{PHOTO-2019-05-23-17-38-6.jpg}}
+	\label{fig:beforeafter}
+	\caption{Mold (a) before and (b) after compression.}
+\end{figure}
+
+The produced plate after manual mixing is illustrated in Figure \ref{fig:plate1}. 
+
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.2]
+	{PHOTO-2019-05-23-17-38-7.jpg}
+	\label{fig:plate1}
+	\caption{Plate produced in compression molding.}
+\end{figure}
+
+As it can be easily noted, the distribution of black PP in the white one is absolutely non-homogeneous, typical consequence of a manual mixing of the pellets (without any homogenization mixing in between). The other evident property of the pressed plate is the flash of melt outside of the mold: this is due to the too high amount of polymer inserted in the mold. 
+The weights of the product before and after compression are reported in Table \ref{tab:weights_compression}. 
+
+\begin{table}[htp]
+	\centering
+	$
+	\begin{array}{ccc}
+	\toprule
+	\textbf{Mixture mass}\,\text{(g)} & \textbf{Plate mass}\,\text{(g)} & \textbf{Variation}\,\text{(\%)} \\
+	\midrule
+	34.00 & 32.50 & -4.41\\
+	\bottomrule
+	\end{array}
+	$
+	\caption{Mass of the sample before and after pressing.}
+	\label{tab:weights_comparison}
+\end{table}
+
+\subsubsection{Production of dumbbell specimens}
+
+In Figure \ref{fig:dumbbell} the dumbbell specimens produced are displayed. 
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.3]
+	{PHOTO-2019-05-23-17-37-07.jpg}
+	\label{fig:dumbbell}
+	\caption{Produced specimens from compression molding plate.}
+\end{figure}\\
+As it can be seen, these specimens are characterized by low isotropy and homogeneity of the mixture. This will be a probable issue when mechanically testing and in resistance to flame propagation. Since the flame retardant is a weakener of strength (it introduces organics with poor adhesion and thus stress intensifiers), these specimens may have higher deformation at break than the more homogeneous ones produced in melt compounding. 
+
 \subsection{Injection molding: sample evaluation}
 
 ISO speciments are reported in Figure \ref{fig:ISO}.
@@ -121,15 +209,15 @@ ISO speciments are reported in Figure \ref{fig:ISO}.
 \begin{figure}[htp]
 \centering
 \subfloat[][]
-{\includegraphics[scale=0.212]{POM}} \qquad
+{\includegraphics[scale=0.2]{POM}} \qquad
 \subfloat[][]
-{\includegraphics[scale=0.21]{PA11ISO}} \\
+{\includegraphics[scale=0.2]{PA11ISO}} \\
 \subfloat[][]
-{\includegraphics[scale=0.25]{PPW}} \qquad
+{\includegraphics[scale=0.2]{PPW}} \qquad
 \subfloat[][]
-{\includegraphics[scale=0.25]{PPB}} \qquad
+{\includegraphics[scale=0.2]{PPB}} \qquad
 \subfloat[][]
-{\includegraphics[scale=0.25]{PA6GF}}
+{\includegraphics[scale=0.2]{PA6GF}}
 \captionsetup{justification=centering}
 \caption{ISO samples: a) POM; b) PA11; c) PP-GF30; d) PP-GF35; e) PA6-GF50. }
 \label{fig:ISO}
@@ -144,7 +232,7 @@ $
 \toprule
 \textbf{Figure} & \textbf{Material} & \textbf{Size}\,(mm) & \textbf{Description} \\
 \midrule
-\text{a} & \text{POM} & 9.74 $x$ 3.94 $x$ 167.06 & \text{white and presence of cold junction}\\
+\text{a} & \text{POM} & 9.74\times 3.94\times 167.06 & \text{white and presence of cold junction}\\
 \text{b} & \text{PA11} & 9.86 $x$ 4.05 $x$ 168.98 & \text{opaque and white}\\
 \text{c} & \text{PP-GF30} & 9.88 $x$ 4.00 $x$ 172.11 & \text{white and stiff}\\
 \text{d} & \text{PP-GF35} & 9.80 $x$ 4.00 $x$ 171.86 & \text{black and stiff}\\
@@ -274,93 +362,6 @@ $
 
 For PE/PP blend it has been considered a blend constituted by PE/PP $50\%$. From Table \ref{tab:pesi} it can be noticed that, for the same volume, weights of samples are in accordance with values of densities taken from literature. 
 
-\section{Introduction}
 
-\section{Experimental activity}
-
-\subsection{Compounding (Internal Mixer)}
-
-The process has been carried out with the instrument Thermo Haake Rheomix 600.\\
-The processing parameters used are the following:
-
-\begin{itemize}
-\item Temperature T = $200^\circ$C
-\item time t = 10 min
-\item Rotation speed $\omega$ = 50 rpm
-\end{itemize}
-
-The sample used has the same composition as Plate 1 sample with a mass of $32.05$ g.
-
-\subsection{Compression molding}
-
-Prepared amount of polypropylene mixture has been used for compression molding process. A press by Carver has been used, as illustrated in Figure \ref{fig:press}. 
-\begin{figure}[htp]
-	\centering
-	\includegraphics[scale=0.2]
-	{PHOTO-2019-05-23-17-38-03.jpg}
-	\label{fig:press}
-	\caption{Carver press for compression molding.}
-\end{figure}\\
-The material to be pressed is put between two stainless steel plates, one having a frame of $12\times 12\, \text{mm}^2$ in order to produce a square plate of some mm of thickness. To avoid any adhesion with the plates, that are used to evenly distribute the pressure and to confine the melt (since the press is able to provide heat), two Mylar${^\text{\textregistered}}$ foils have been put in between the steel and the material. The press has been set to produce a pressure of 8 tons, equivalent to 5.45 MPa, in the frame. The material has undergone an heat treatment under this pressure of 200°C for 10 minutes. After this, the press has been cooled with water circulating in a refrigerating circuit inside of it and the molded piece extracted. Produced plate is then visually analyzed and weighted in order to estimate weight losses. \par 
-
-\subsubsection{Production of dumbbell specimens}
-
-After the analysis of the plate, this has been cut to obtain ISO 527-1BA shaped specimens, that are used in another laboratory activity.     
-
-\section{Results and discussion}
-
-\subsection{Compression molding}
-
-The mold before and after pressing is reported in Figure \ref{fig:beforeafter}. 
-
-\begin{figure}[htp]
-	\centering
-	\subfloat[][]
-	{\includegraphics[scale=0.2]{PHOTO-2019-05-23-17-38-02.jpg}} \qquad 
-	\subfloat[][]
-	{\includegraphics[scale=0.2]{PHOTO-2019-05-23-17-38-6.jpg}}
-	\label{fig:beforeafter}
-	\caption{Mold (a) before and (b) after compression.}
-\end{figure}
-
-The produced plate after manual mixing is illustrated in Figure \ref{fig:plate1}. 
-
-\begin{figure}[htp]
-	\centering
-	\includegraphics[scale=0.2]
-	{PHOTO-2019-05-23-17-38-7.jpg}
-	\label{fig:plate1}
-	\caption{Plate produced in compression molding.}
-\end{figure}
-
-As it can be easily noted, the distribution of black PP in the white one is absolutely non-homogeneous, typical consequence of a manual mixing of the pellets (without any homogenization mixing in between). The other evident property of the pressed plate is the flash of melt outside of the mold: this is due to the too high amount of polymer inserted in the mold. 
-The weights of the product before and after compression are reported in Table \ref{tab:weights_compression}. 
-
-\begin{table}[htp]
-	\centering
-	$
-	\begin{array}{ccc}
-	\toprule
-	\textbf{Mixture mass}\,\text{(g)} & \textbf{Plate mass}\,\text{(g)} & \textbf{Variation}\,\text{(\%)} \\
-	\midrule
-	34.00 & 32.50 & -4.41\\
-	\bottomrule
-	\end{array}
-	$
-	\caption{Mass of the sample before and after pressing.}
-	\label{tab:weights_comparison}
-\end{table}
-
-\subsubsection{Production of dumbbell specimens}
-
-In Figure \ref{fig:dumbbell} the dumbbell specimens produced are displayed. 
-\begin{figure}[htp]
-	\centering
-	\includegraphics[scale=0.3]
-	{PHOTO-2019-05-23-17-37-07.jpg}
-	\label{fig:dumbbell}
-	\caption{Produced specimens from compression molding plate.}
-\end{figure}\\
-As it can be seen, these specimens are characterized by low isotropy and homogeneity of the mixture. This will be a probable issue when mechanically testing and in resistance to flame propagation. Since the flame retardant is a weakener of strength (it introduces organics with poor adhesion and thus stress intensifiers), these specimens may have higher deformation at break than the more homogeneous ones produced in melt compounding. 
 
 \end{document}
