--- a/Polymers lab/4/LAB 4.tex
+++ b/Polymers lab/4/LAB 4.tex
@@ -278,19 +278,6 @@ For PE/PP blend it has been considered a blend constituted by PE/PP $50\%$. From
 
 \section{Experimental activity}
 
-\subsection{Compounding (Internal Mixer)}
-
-The process has been carried out with the instrument Thermo Haake Rheomix 600.\\
-The processing parameters used are the following:
-
-\begin{itemize}
-\item Temperature T = $200^\circ$C
-\item time t = 10 min
-\item Rotation speed $\omega$ = 50 rpm
-\end{itemize}
-
-The sample used has the same composition as Plate 1 sample with a mass of $32.05$ g.
-
 \subsection{Compression molding}
 
 Prepared amount of polypropylene mixture has been used for compression molding process. A press by Carver has been used, as illustrated in Figure \ref{fig:press}. 
@@ -301,7 +288,19 @@ Prepared amount of polypropylene mixture has been used for compression molding p
 	\label{fig:press}
 	\caption{Carver press for compression molding.}
 \end{figure}\\
-The material to be pressed is put between two stainless steel plates, one having a frame of $12\times 12\, \text{mm}^2$ in order to produce a square plate of some mm of thickness. To avoid any adhesion with the plates, that are used to evenly distribute the pressure and to confine the melt (since the press is able to provide heat), two Mylar${^\text{\textregistered}}$ foils have been put in between the steel and the material. The press has been set to produce a pressure of 8 tons, equivalent to 5.45 MPa, in the frame. The material has undergone an heat treatment under this pressure of 200°C for 10 minutes. After this, the press has been cooled with water circulating in a refrigerating circuit inside of it and the molded piece extracted. Produced plate is then visually analyzed and weighted in order to estimate weight losses. \par 
+The material to be pressed is put between two stainless steel plates, one having a frame of $12\times 12\, \text{mm}^2$ in order to produce a square plate of some mm of thickness. To avoid any adhesion with the plates, that are used to evenly distribute the pressure and to confine the melt (since the press is able to provide heat), two Mylar${^\text{\textregistered}}$ foils have been put in between the steel and the material. The press has been set to produce a pressure of 8 tons, equivalent to 5.45 MPa, in the frame and a velocity of 4 mm/min. The material has undergone an heat treatment under this pressure of 200°C for 10 minutes. After this, the press has been cooled with water circulating in a refrigerating circuit inside of it and the molded piece extracted. Produced plate is then visually analyzed and weighted in order to estimate weight losses. \par 
+
+\subsubsection{Compounding (Internal Mixer)}
+
+The process has been carried out with the instrument Thermo Haake Rheomix 600, where the polypropylene mixture undergoes a thermal treatment of $200^\circ$C for 10 minutes. Rotation speed has been set at 40 rpm.
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.2]
+	{PHOTO-2019-05-23-17-37-35.jpg}
+	\label{fig:rheo}
+	\caption{Rheomix 600 after usage. Remains of polypropylene mixture are visible.}
+\end{figure}\\
+The product obtained by this process has then been subjected to compression molding, using the same parameters as Plate 1.
 
 \subsubsection{Production of dumbbell specimens}
 
@@ -334,22 +333,37 @@ The produced plate after manual mixing is illustrated in Figure \ref{fig:plate1}
 \end{figure}
 
 As it can be easily noted, the distribution of black PP in the white one is absolutely non-homogeneous, typical consequence of a manual mixing of the pellets (without any homogenization mixing in between). The other evident property of the pressed plate is the flash of melt outside of the mold: this is due to the too high amount of polymer inserted in the mold. 
-The weights of the product before and after compression are reported in Table \ref{tab:weights_compression}. 
+
+\subsubsection{Compounding (Internal Mixer)}
+
+A comparison between plates after compression molding si reported in Figure \ref{fig:plates}.
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.3]
+	{PIATTI .jpg}
+	\label{fig:plates}
+	\caption{Compressed plates: Plate 1 (from pellets) at sx and Plate 2 (from compounding) at dx.}
+\end{figure}\\
+It can be seen that subjecting the sample to compounding before compression molding, a better homogeneity can  be reached.
+The weights of the product before and after compression are reported in Table \ref{tab:weights_compression}.
 
 \begin{table}[htp]
 	\centering
 	$
-	\begin{array}{ccc}
+	\begin{tabular}{c|ccc}
 	\toprule
-	\textbf{Mixture mass}\,\text{(g)} & \textbf{Plate mass}\,\text{(g)} & \textbf{Variation}\,\text{(\%)} \\
+	\textbf{Sample} & \textbf{Mixture mass}\,\text{(g)} & \textbf{Plate mass}\,\text{(g)} & \textbf{Variation}\,\text{(\%)} \\
 	\midrule
-	34.00 & 32.50 & -4.41\\
+	1 & 34.00 & 32.50 & -4.41\\
+	2 & 32.05 & 30.50 & -4.84\\
 	\bottomrule
-	\end{array}
+	\end{tabular}
 	$
-	\caption{Mass of the sample before and after pressing.}
+	\caption{Mass of the samples before and after pressing.}
 	\label{tab:weights_comparison}
 \end{table}
+
+The table shows that the weight variation is slighty highier, that can be explained by the more difficult preparation of the sample before compression, due to its volume distribution.
 
 \subsubsection{Production of dumbbell specimens}
 
@@ -361,6 +375,13 @@ In Figure \ref{fig:dumbbell} the dumbbell specimens produced are displayed.
 	\label{fig:dumbbell}
 	\caption{Produced specimens from compression molding plate.}
 \end{figure}\\
-As it can be seen, these specimens are characterized by low isotropy and homogeneity of the mixture. This will be a probable issue when mechanically testing and in resistance to flame propagation. Since the flame retardant is a weakener of strength (it introduces organics with poor adhesion and thus stress intensifiers), these specimens may have higher deformation at break than the more homogeneous ones produced in melt compounding. 
+As it can be seen, these specimens are characterized by low isotropy and homogeneity of the mixture. This will be a probable issue when mechanically testing and in resistance to flame propagation. Since the flame retardant is a weakener of strength (it introduces organics with poor adhesion and thus stress intensifiers), these specimens may have higher deformation at break than the more homogeneous ones produced in melt compounding, showed in Figure \ref{fig:dumbbellc}.
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.4]
+	{PHOTO-2019-05-23-17-37-13.jpg}
+	\label{fig:dumbbellc}
+	\caption{Produced specimens from compression molding plate after compounding.}
+\end{figure}\\
 
 \end{document}
