--- a/Polymers lab/4/LAB 4.tex
+++ b/Polymers lab/4/LAB 4.tex
@@ -437,6 +437,13 @@ $
 \end{table}
 
 Accordingly to literature~\cite{encyclopedia} high strength PP fibers can reach values of 2.6 GPa and 3.5\% deformation at break. Since tensile strength and deformation at break follow a hyperbolic envelope, by fitting these data with the generic equation of the hyperbole (only parameter is a constant), the following can be found, expressed in Figure \ref{fig:hyperbole}.
-  
+\begin{figure}[htp]
+	\centering
+	\includegraphics[scale=0.15]
+	{hyperbole.png}
+	\label{fig:hyperbole}
+	\caption{Stress-strain relation for PP fibers.}
+\end{figure}
+
 
 \end{document}
