--- a/Polymers lab/4/LAB 4.tex
+++ b/Polymers lab/4/LAB 4.tex
@@ -97,11 +97,17 @@ width0pt\right\delimright_{\rlap{$\scriptstyle#3$}}$};}}
 
 \begin{chapterabstract}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla hendrerit, lorem feugiat dignissim congue, justo metus eleifend urna, a iaculis turpis purus vel ante. Maecenas vitae augue iaculis elit blandit lobortis et et neque. Fusce lacinia augue fringilla nisi consequat dapibus. Quisque molestie volutpat commodo. Suspendisse porta velit facilisis interdum tempus. Donec accumsan, justo a eleifend ullamcorper, leo nisi blandit nibh, eu scelerisque metus odio in tellus. Maecenas eget varius metus, at fermentum lectus. Maecenas eget condimentum mi. Nulla facilisi. Sed at sagittis lectus, sed pulvinar ligula.
+
+Two mixtures composed of 15\% by weight of flame-retardant PP (black) and 85\% of PPH-B-10-FB (white) were prepared. One mixture was subjected to compounding while the other was mixed manually before producing two samples with compression molding. the distribution of black PP in the white one is absolutely non-homogeneous,typical consequence of a manual mixing of pellets (without any homogenization mixing in between).
+Several samples produced by injection molding according to specific standards (ISO and ASTM) were analyzed and identified. This procedure was also useful for calculating the shrinkage to which some materials are subjected: it is clear that for reinforced materials, shrinkage is negligible due to the presence of glass fibers that give dimensional stability to the polymer; semi-crystalline polymers, on the other hand, exhibit higher shrinkage values than amorphous polymers. Lastly the diameter of six different filament samples have been measured in order to predict their mechanical properties in function of the draw ratio and the process parameters.
+
+
 
 \end{chapterabstract} 
 
 \section{Introduction}
+
+The aim of this laboratory activity was to use different polymer processing techniques together with the analysis of the properties of some samples produced by the listed techniques.
 
 \section{Materials and methods}
 
@@ -524,9 +530,12 @@ Accordingly to literature~\cite{encyclopedia} high strength PP fibers can reach 
 	\caption{Stress-strain relation for PP fibers.}
 \end{figure}
 
-As it can be easily noted, the distribution of black PP in the white one is absolutely non-homogeneous, typical consequence of a manual mixing of the pellets (without any homogenization mixing in between). The other evident property of the pressed plate is the flash of melt outside of the mold: this is due to the too high amount of polymer inserted in the mold. 
+\section{Conclusions}
 
 
+There are different polymer processing techniques. In this laboratory session compression molding and compouding techniques were used and samples produced by injection molding were analyzed.
+Several observations were made by examining the samples produced, in order to correlate the process parameters with the properties of the materials.
+We have seen that a sample will be more homogeneous if subjected to compounding before compression molding; from the evaluation of samples produced by injection molding, the presence or not of shrinkage will be an index of the dimensional stability of the polymer or if it is a crystalline rather than an amorphous one; finally, by measuring the diameter of a fiber it is possible to predict some mechanical properties of the fiber itself.
 
 \begin{thebibliography}{1}
 
