--- a/Polymers lab/4/LAB 4.tex
+++ b/Polymers lab/4/LAB 4.tex
@@ -93,7 +93,7 @@ width0pt\right\delimright_{\rlap{$\scriptstyle#3$}}$};}}
 
 \begin{document}
 
-
+\includepdf{frontespizio4.pdf}
 
 \begin{chapterabstract}
 
