--- a/Polymers lab/4/lab 4.tex
+++ b/Polymers lab/4/lab 4.tex
@@ -101,8 +101,6 @@ width0pt\right\delimright_{\rlap{$\scriptstyle#3$}}$};}}
 Two mixtures composed of 15\% by weight of flame-retardant PP (black) and 85\% of PPH-B-10-FB (white) were prepared. One mixture was subjected to compounding while the other was mixed manually before producing two samples with compression molding. the distribution of black PP in the white one is absolutely non-homogeneous,typical consequence of a manual mixing of pellets (without any homogenization mixing in between).
 Several samples produced by injection molding according to specific standards (ISO and ASTM) were analyzed and identified. This procedure was also useful for calculating the shrinkage to which some materials are subjected: it is clear that for reinforced materials, shrinkage is negligible due to the presence of glass fibers that give dimensional stability to the polymer; semi-crystalline polymers, on the other hand, exhibit higher shrinkage values than amorphous polymers. Lastly the diameter of six different filament samples have been measured in order to predict their mechanical properties in function of the draw ratio and the process parameters.
 
-
-
 \end{chapterabstract} 
 
 \section{Introduction}
@@ -153,6 +151,8 @@ The product obtained by this process has then been subjected to compression mold
 
 After the analysis of the plate, this has been cut to obtain ISO 527-1BA shaped specimens, that are used in another laboratory activity.     
 
+\newpage
+
 \subsection{Injection molding: sample evaluation}
 Different specimens of unknown polymeric materials have been analysed and identified. They have been produced by injection molding according to specific standards (ISO and ASTM):
 \begin{itemize}
@@ -190,6 +190,8 @@ Size of all specimens and the mold cavity have been measured through a caliper i
 Where $\Delta x$ is the difference between the initial and final dimension (lenght, width and thickness) and $x_0$ is the initial dimension (lenght, width and thickness). 
 
 ASTM samples (with sprue and bar) have been weighted through the balance Mettler PM 4600 in order to compare the total weight and polymer density (taken from literature~\cite{handbook}).
+
+\newpage
 
 \subsection{Filament analysis}
 
